<resources>
    <string name="app_name">NHS APP Paciente</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configurações</string>
    <string name="fragment_home">Home</string>
    <string name="fragment_medicalRecord">Ficha Médica</string>
    <string name="fragment_institutions">Instituições de Saúde</string>
    <string name="fragment_medication">Medicações</string>
    <string name="fragment_exams">Exames</string>
    <string name="fragment_physicians">Médicos</string>
    <string name="fragment_timeline">Timeline</string>
    <string name="fragment_vaccination">Vacinas</string>
    <string name="email_editText">E-mail</string>
    <string name="password_editText">Senha</string>
    <string name="emailNotNull">E-mail não pode ser vazio!</string>
    <string name="passwordNotNull">Senha não pode ser vazio!</string>
    <string name="invalidEmail">E-mail inválido!</string>
    <string name="userNotFound">Usuário não encontrado</string>
    <string name="userNotFoundText">O usuário informado não foi encontrado!</string>
    <string name="userNotAllowed">Usuário sem permissão</string>
    <string name="userNotAllowedText">O usuário informado não possui permissão de acesso a esse aplicativo!</string>
    <string name="userAlreadyRegistered">Usuário já cadastrado!</string>
    <string name="userAlreadyRegisteredText">Você já possui uma conta cadastrada!</string>
    <string name="userAlreadyExists">Usuário já cadastrado!</string>
    <string name="userAlreadyExistsText">Você já possui uma conta cadastrada com este e-mail, porém não é um paciente</string>
    <string name="nameEdiText">Nome</string>
    <string name="identityNumber">Nº Documento de Identidade</string>
    <string name="healthhands">Sua saúde em suas mãos</string>
    <string name="advice">Antes de começar precisamos de algumas informações! Caso não saiba não se preocupe, pois poderá coloca-las em outro momento.</string>
    <string name="fatherNameEditText">Nome do pai</string>
    <string name="motherNameEditText">Nome da mãe</string>
    <string name="heigthEditText">Altura</string>
    <string name="confirm">Confirmar</string>
    <string name="skinColorTextView">Cor da pele</string>
    <string name="weigthEditText">Peso</string>
    <string name="personalInformations">Informações pessoais</string>
    <string name="back">Voltar</string>
    <string name="next">Próximo</string>
    <string name="almostDone">Quase tudo pronto</string>
    <string name="streetEditText">Rua</string>
    <string name="neighborhoodEditText">Bairro</string>
    <string name="postalCodeEditText">CEP</string>
    <string name="contactNumberEditText">Número</string>
    <string name="contact">Contato</string>
    <string name="countrySpinner">País</string>
    <string name="cityEditText">Cidade</string>
    <string name="birthdayEditText">Data de Nascimento</string>
    <string name="user">Usuário</string>
    <string name="prepared">Preparado para fazer sua vida mais fácil?</string>
    <string name="loginEditText">Login</string>
    <string name="passwordEditText">Senha</string>
    <string name="confirmpasswordEditText">Confirmar senha</string>
    <string name="nameNotNull">Nome não pode ser vazio!</string>
    <string name="identityNumberNotNull">Nº do Documento não pode ser vazio!</string>
    <string name="streetNotNull">Rua não pode ser vazio!</string>
    <string name="birthdayNotNull">Data de nascimento não pode ser vazio!</string>
    <string name="neighborhoodNotNull">Bairro não pode ser vazio!</string>
    <string name="cityNotNull">Cidade não pode ser vazio!</string>
    <string name="contactNumberNotNull">Numero não pode ser vazio!</string>
    <string name="telephoneEditText">Telefone</string>
    <string name="telephoneNumberNotNull">Telefone não pode ser vazio!</string>
    <string name="confirmPasswordNotNull">Confirmação de senha não pode ser vazio!</string>
    <string name="passwordEquals">Ambas as senhas devem ser iguais!</string>
    <string name="maleRadioButton">Masculino</string>
    <string name="femaleRadioButton">Feminino</string>
    <string name="otherRadioButton">Outros</string>
    <string name="BR">Brasil</string>
    <string name="FS">África do Sul</string>
    <string name="invalidIdentityDocument">CPF inválido</string>
    <string name="invalidIdentityDocumentDescription">O CPF digitado é inválido!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registerLink">Não possui uma conta ? Cadastre-se!</string>
    <string name="medicineNameTextView">Nome do medicamento</string>
    <string name="loginButton">Entrar</string>
    <string name="loginInsideApp">Entrando</string>
    <string name="nomeDoUsuarioTextView">Nome do usuário</string>
    <string name="fragment_diagnosis">Diagnóstico</string>
    <string name="logoff">Sair</string>
    <string name="logoffMessage">Deseja sair do aplicativo ?</string>
    <string name="yesOption">Sim</string>
    <string name="noOption">Não</string>
    <string name="medicineNameEditText">Nome do medicamento</string>
    <string name="fragment_add_medication">Adicionar medicamento</string>
    <string name="nextButton">Proximo</string>
    <string name="searchingMedicines">Buscando medicamentos...</string>
    <string name="frequency">FREQUÊNCIA</string>
    <string name="onetimeaday">Uma vez por dia</string>
    <string name="remember">Lembrar</string>
    <string name="quantityPerDay">Frequência de uso</string>
    <string name="takeQuantity">Tome</string>
    <string name="useWhenNecessaryTextView">Tomar quando for necessário</string>
    <string name="defineTimeAndQuantityTextView">Definir tempo e quantidade</string>
    <string name="defineQuantityTextView">Defina a quantidade (número de doses) a ser tomada neste horário</string>
    <string name="cancel">Cancelar</string>
    <string name="sunday">Domingo</string>
    <string name="monday">Segunda-feira</string>
    <string name="tuesday">Terça-feira</string>
    <string name="wednesday">Quarta-feira</string>
    <string name="thursday">Quinta-feira</string>
    <string name="friday">Sexta-feira</string>
    <string name="saturday">Sábado</string>
    <string name="scheduleDays">Agendamento</string>
    <string name="minimumQuantity">Quantidade mínima é de 1 vez ao dia</string>
    <string name="done">Feito</string>
    <string name="success">Sucesso</string>
    <string name="successAddingMedication">Medicamento adicionado com sucesso!</string>
    <string name="error">Problema</string>
    <string name="errorAddingMedication">Um problema ocorreu ao adicionar o medicamento, por favor, tente novamente mais tarde ou entre em contato com o suporte!</string>
    <string name="medicineName">Nome do medicamento</string>
    <string name="infoMedication">Medicamento</string>
    <string name="excludeButton">Excluir</string>
    <string name="successRemovingMedication">Medicamento removido com sucesso!</string>
    <string name="errorRemovingMedication">Ocorreu um problema durante a remoção do medicamento! Tente novamente mais tarde ou entre em contato com o suporte!</string>
    <string name="successUpdatingMedication">Medicamento alterado com sucesso!</string>
    <string name="errorUpdatingMedication">Ocorreu um erro ao atualizar o medicamento! Por favor, tente novamente ou entre em contato mais tarde!</string>
    <string name="takeMedicationTime">Hora de tomar o medicamento</string>
    <string name="in">as</string>
    <string name="takeDoses">tomar</string>
    <string name="takeMoreThanOneMedication">Você tem mais de um medicamento para tomar!</string>
    <string name="takeMedication">Tomar</string>
    <string name="of">de</string>
    <string name="dose">dose</string>
    <string name="startTime">Hora inicial</string>
    <string name="oneTime">1 vez por dia</string>
    <string name="twoTimes">2 vezes por dia</string>
    <string name="threeTimes">3 vezes por dia</string>
    <string name="fourTimes">4 vezes por dia</string>
    <string name="fiveTimes">5 vezes por dia</string>
    <string name="sixTimes">6 vezes por dia</string>
    <string name="sevenTimes">7 vezes por dia</string>
    <string name="eightTimes">8 vezes por dia</string>
    <string name="nineTimes">9 vezes por dia</string>
    <string name="tenTimes">10 vezes por dia</string>
    <string name="elevenTimes">11 vezes por dia</string>
    <string name="twelveTimes">12 vezes por dia</string>
    <string name="times">vez</string>
    <string name="times_n">vezes</string>
    <string name="logout">Sair</string>
    <string name="addMedication">Adicionar medicamento</string>
    <string name="options">Opções</string>
    <string name="sync">Sincronizar</string>
    <string name="loading">Carregando...</string>
    <string name="syncMessage">Estamos sincronizando todos os seus dados de medicamento na nuvem para seus médicos :)</string>
    <string name="synchronize">Sincronizar</string>
    <string name="medicines">Medicamentos</string>
    <string name="synchronizedData">Dados sincronizados com sucesso!</string>
    <string name="connection">Conexão com internet</string>
    <string name="connectionMessage">Para fazer esta ação é necessário que você esteja conectado com a internet! Conecte-se e tente novamente!</string>
    <string name="edit">Editar</string>
    <string name="selectCountry">Selecione o pais</string>
    <string name="searchingUser">Buscando usuário</string>
    <string name="saving">Salvando</string>
    <string name="see">Ver</string>
    <string name="seeInstitution">Ver instituição</string>
    <string name="seePhysician">Ver médicos</string>
    <string name="seeHealthInstitution">Ver instituições</string>
    <string name="seeAttachment">Ver Anexos</string>
    <string name="downloadAttachment">Baixar Anexo</string>
    <string name="noAttachmentAttention">Atenção!</string>
    <string name="noAttachmentText">Não há anexos para esse exame.</string>
    <string name="loadingHealthInstitutions">Carregando instituições de saúde</string>
    <string name="pleaseEnableGps">Por favor, habilite seu GPS para ver as instituições de saúde mais próximas</string>
    <string name="loadingPhysiciansFromHealthInstitution">Carregando médicos desta instituição</string>
    <string name="emptyHealthInstitution">Nenhuma instituição localizada!</string>
    <string name="emptyPhysicianHealthInstitution">Essa instituição não possui nenhum médico</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="diagnosisIn">Diagnóstico feito em </string>
    <string name="examIn">Exame feito em </string>
    <string name="healthInstitutions">Instituições</string>
    <string name="map">Mapa</string>
    <string name="youAreHere">Você está aqui</string>
    <string name="physicians">Médicos</string>
    <string name="known">Conhecidos</string>
    <string name="specialization">Especialização</string>
    <string name="dontHave">Não possui</string>
    <string name="seeInstitutions">Ver instituições</string>
    <string name="loadingHealthInstitutionFromPhysician">Carregando instituições que o médico trabalha</string>
    <string name="emptyHealthInstitutionPhysician">Médico não trabalha em nenhuma instituição</string>
    <string name="loadingPhysicians">Carregando médicos</string>
    <string name="loadingKnownPhysicians">Carregando médicos conhecidos</string>
    <string name="define">Definir</string>
    <string name="delete">Excluir</string>
    <string name="filter">Filtrar</string>
    <string name="filterPhysician">Filtrar</string>
    <string name="examsData">Dados do Exame</string>
    <string name="updating">Atualizando.</string>
    <string name="errorFindingUser">Erro ao obter suas informações! Tente novamente mais tarde.</string>
    <string name="secretCode">Seu código secreto é:</string>
</resources>