<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete"
        android:icon="@drawable/delete"
        android:orderInCategory="10"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/check"
        android:icon="@drawable/check"
        android:orderInCategory="10"
        android:title="@string/define"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/filter"
        android:icon="@drawable/filter"
        android:orderInCategory="10"
        android:title="@string/filter"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>



</menu>