<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="healthsystemapp.com.example.tcc.healthsystemapp.login.LoginView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ecf0f1"
    android:id="@+id/loginScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="32dp"
            android:weightSum="1"
            >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="156dp"
                android:layout_margin="32dp"

                android:layout_marginTop="32dp"
                android:layout_weight="0.19"
                app:srcCompat="@drawable/logo" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/emailEditText"
                    style="@style/EditText"
                    android:hint="@string/email_editText"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/passwordEditText"
                    style="@style/EditText"
                    android:hint="@string/password_editText"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                style="@style/PrimaryButton"
                android:text="@string/loginButton" />


            <Button
                android:id="@+id/regiterButton"
                android:textAllCaps="false"
                style="@style/BorderlessButton"
                android:text="@string/registerLink"
                />

        </LinearLayout>

    </ScrollView>

</FrameLayout>

